# TcpBootload

./: .gitattributes  .gitignore  README.md
docs/: 10-总体架构.md  20-通信与升级协议框架.md  30-上位机软件架构-Python-PyQt.md  40-开发计划与里程碑.md  50-Bootload传输协议详细设计.md  60-MCU端Bootload移植说明.md
mcu/: bootload_mcu.c  bootload_mcu.h  bootload_port_stm32f407.c  cTcpServer.c  cTcpServer.h  modbusTcp,.c  modbusTcp.h
pc_tool/: build_exe.ps1  pyproject.toml  requirements.txt  run.ps1
pc_tool/src/tcp_bootload_host/: __init__.py  app.py  main.py
pc_tool/src/tcp_bootload_host/model/: dto.py
pc_tool/src/tcp_bootload_host/protocol/: __init__.py  bootload_protocol.py  modbus_client.py  register_map.py
pc_tool/src/tcp_bootload_host/service/: device_session.py  upgrade_service.py
pc_tool/src/tcp_bootload_host/ui/: __init__.py  main_window.py
pc_tool/src/tcp_bootload_host/ui/widgets/: __init__.py
pc_tool/src/tcp_bootload_host/util/: crc.py  firmware.py
